--- a/src/sass/components/reviews-item.scss
+++ b/src/sass/components/reviews-item.scss
@@ -84,3 +84,14 @@
   }
 
 }
+
+@media ($tablet-width) {
+
+  .reviews-item {
+    width: calc(50% - 40px);
+    margin: 20px;
+
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1);
+  }
+
+}
