--- a/src/sass/components/app-link.scss
+++ b/src/sass/components/app-link.scss
@@ -86,3 +86,16 @@
     line-height: 20px;
   }
 }
+
+@media ($tablet-width) {
+  .app-link {
+    margin: 20px;
+    width: calc(50% - 40px);
+    min-width: 270px;
+    padding-right: 20px;
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.3);
+  }
+  .app-link .text {
+    line-height: 20px;
+  }
+}
